New versions with higher resolutions

--- a/26_pytorch_manet_efficientnet_b6_1024_2shifted_slices_groupkfold_grad_accu_mixed.ipynb
+++ b/26_pytorch_manet_efficientnet_b6_1024_2shifted_slices_groupkfold_grad_accu_mixed.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,27 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/numba/core/ir_utils.py:2067: NumbaPendingDeprecationWarning: \u001b[1m\n",
-      "Encountered the use of a type that is scheduled for deprecation: type 'reflected list' found for argument 'pixels' of function 'rle_numba'.\n",
-      "\n",
-      "For more information visit https://numba.pydata.org/numba-doc/latest/reference/deprecation.html#deprecation-of-reflection-for-list-and-set-types\n",
-      "\u001b[1m\n",
-      "File \"<ipython-input-7-313ecb27751d>\", line 2:\u001b[0m\n",
-      "\u001b[1m@numba.njit()\n",
-      "\u001b[1mdef rle_numba(pixels):\n",
-      "\u001b[0m\u001b[1m^\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "  warnings.warn(NumbaPendingDeprecationWarning(msg, loc=loc))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check run length encoding starting with 0\n",
     "assert rle_numba([0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1]) == [2, 2, 5, 1, 7, 4, 12, 1]\n",
@@ -211,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +307,7 @@
        "1e2425f28  49453112 7 49479881 22 49506657 31 49533433 40..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -367,20 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "WINDOW = 1024 # tile size\n",
+    "WINDOW = 1536 # tile size\n",
     "MIN_OVERLAP = 32\n",
-    "NEW_SIZE = 512 # size after re-size which are fed to the model\n",
+    "NEW_SIZE = 768 # size after re-size which are fed to the model\n",
     "THRESHOLD = 0\n",
-    "CONTENT_THRESHOLD = 0.02"
+    "CONTENT_THRESHOLD = 0.001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,6 +389,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_from_slice(dataset, layers, x1, x2, y1, y2):\n",
+    "    if dataset.count == 3:\n",
+    "        image = dataset.read([1,2,3],\n",
+    "                    window=Window.from_slices((x1,x2),(y1,y2)))\n",
+    "        image = np.moveaxis(image, 0, -1)\n",
+    "    else:\n",
+    "        image = np.zeros((WINDOW, WINDOW, 3), dtype=np.uint8)\n",
+    "        for fl in range(3):\n",
+    "            image[:,:,fl] = layers[fl].read(window=Window.from_slices((x1,x2),(y1,y2)))\n",
+    "    return image.astype(np.uint8)\n",
+    "\n",
+    "def extract_layers(dataset, filepath):\n",
+    "    layers = None\n",
+    "    if dataset.count != 3:\n",
+    "        layers = [rasterio.open(subd) for subd in dataset.subdatasets]\n",
+    "    return layers"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -417,18 +423,12 @@
     "# normalize_transform = T.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
     "# normalize_transform = T.Normalize([0.65459856,0.48386562,0.69428385], [0.15167958,0.23584107,0.13146145])\n",
     "normalize_transform = T.Normalize([0.6130, 0.4126, 0.6595], [0.1417, 0.2045, 0.1237])\n",
-    "\n",
-    "def read_from_slice(dataset, x1, x2, y1, y2):\n",
-    "    image = dataset.read([1,2,3],\n",
-    "                    window=Window.from_slices((x1,x2),(y1,y2)))\n",
-    "    image = np.moveaxis(image, 0, -1)\n",
-    "    return image\n",
-    "\n",
     "class HubDataset(D.Dataset):\n",
-    "    def __init__(self, root_dir, transform, window=256, overlap=32, threshold = THRESHOLD):\n",
+    "    def __init__(self, root_dir, transform, valid_transform=None, mode='train', window=WINDOW, overlap=MIN_OVERLAP, threshold = THRESHOLD):\n",
     "        self.path = root_dir\n",
     "        assert self.path.exists()\n",
-    "        self.overlap, self.window, self.transform, self.threshold = overlap, window, transform, threshold\n",
+    "        self.overlap, self.window, self.transform, self.valid_transform, self.threshold = overlap, window, transform, valid_transform, threshold\n",
+    "        self.mode = mode\n",
     "        self.csv = pd.read_csv(self.path / 'train.csv', index_col=[0])\n",
     "        self.build_slices()\n",
     "        self.len = len(self.slices)\n",
@@ -439,6 +439,27 @@
     "            normalize_transform,\n",
     "        ])\n",
     "        \n",
+    "    def __copy__(self):\n",
+    "        new_ds = type(self)(\n",
+    "            self.path,\n",
+    "            self.transform,\n",
+    "            valid_transform=self.valid_transform,\n",
+    "            mode=self.mode,\n",
+    "            window=self.window,\n",
+    "            overlap=self.overlap,\n",
+    "            threshold=self.threshold\n",
+    "        )\n",
+    "        new_ds.masks = self.masks\n",
+    "        new_ds.files = self.files\n",
+    "        new_ds.slices = self.slices\n",
+    "        new_ds.skipped = self.skipped\n",
+    "        return new_ds\n",
+    "    \n",
+    "    def build_masks(self):\n",
+    "        for i, filename in tqdm(enumerate(self.csv.index), total = len(self.csv)):\n",
+    "            filepath = self.path/'train'/f'{filename}.tiff'\n",
+    "            with rasterio.open(filepath) as dataset:\n",
+    "                self.masks.append(rle_decode(self.csv.loc[filename, 'encoding'], dataset.shape))\n",
     "        \n",
     "    def build_slices(self):\n",
     "        self.masks = []; self.files = []; self.slices = []\n",
@@ -453,21 +474,20 @@
     "                self.files.append(filepath)\n",
     "                with rasterio.open(filepath) as dataset:\n",
     "                    self.build_slice(dataset, filename, i)\n",
+    "                print(f'Finished {filename}')\n",
     "            with open(slices_path, \"wb\") as filehandler:\n",
     "                pickle.dump(self.slices, filehandler)\n",
     "            with open(files_path, \"wb\") as filehandler:\n",
     "                pickle.dump(self.files, filehandler)\n",
-    "            with open(masks_path, \"wb\") as filehandler:\n",
-    "                pickle.dump(self.masks, filehandler)\n",
+    "            \n",
     "        else:\n",
     "            print('Reading cached slices, files and masks')\n",
     "            with open(slices_path,'rb') as file:\n",
     "                self.slices = pickle.load(file)\n",
     "            with open(files_path,'rb') as file:\n",
     "                self.files = pickle.load(file)\n",
-    "            with open(masks_path,'rb') as file:\n",
-    "                self.masks = pickle.load(file)\n",
-    "                        \n",
+    "        self.build_masks()\n",
+    "                \n",
     "    def build_slice(self, dataset, filename, i):\n",
     "        dataset_shape = dataset.shape\n",
     "        self.masks.append(rle_decode(self.csv.loc[filename, 'encoding'], dataset_shape))\n",
@@ -482,32 +502,30 @@
     "#         # vertical\n",
     "        slices_copy_y[:,(2,3)] += WINDOW // 2\n",
     "        slices = np.concatenate ([slices, slices_copy_y])\n",
+    "        slices = slices[~(slices[:,1] > dataset_shape[0]),:] # filter those outside of the screen\n",
+    "        slices = slices[~(slices[:,3] > dataset_shape[1]),:] # filter those outside of the screen\n",
     "        \n",
-    "        # vertical & horizontal\n",
-    "        slices_copy_xy = slices.copy()\n",
-    "        slices_copy_xy[:,(0,1,2,3)] += WINDOW // 2\n",
-    "        slices = np.concatenate ([slices, slices_copy_xy])\n",
+    "        layers = extract_layers(dataset, filename)\n",
     "        \n",
-    "        slices = slices[~(slices[:,1] > dataset.shape[0]),:] # filter those outside of the screen\n",
-    "        slices = slices[~(slices[:,3] > dataset.shape[1]),:] # filter those outside of the screen\n",
-    "\n",
     "        # Only including slices above a specific threshold\n",
     "        # Note: we are potentially throwing away some data here\n",
     "        for slc in slices:\n",
     "            x1, x2, y1, y2 = slc\n",
-    "            image = read_from_slice(dataset, x1, x2 , y1, y2)\n",
-    "            contains_info = is_tile_contains_info(image)\n",
-    "            if self.masks[-1][x1:x2,y1:y2].sum() > self.threshold and contains_info[0]:\n",
+    "            image = read_from_slice(dataset, layers, x1, x2 , y1, y2)\n",
+    "#             contains_info = is_tile_contains_info(image)\n",
+    "#             if self.masks[-1][x1:x2,y1:y2].sum() > self.threshold and contains_info[0]:\n",
+    "            if self.masks[-1][x1:x2,y1:y2].sum() > self.threshold:\n",
     "                self.slices.append([i,x1,x2,y1,y2])\n",
     "            else:\n",
     "                self.skipped += 1\n",
     "                        \n",
     "                        \n",
     "    def apply_transform(self, image, mask):\n",
-    "        augments = self.transform(image=image, mask=mask)\n",
+    "        augments = self.transform(image=image, mask=mask) if self.mode == 'train' else self.valid_transform(image=image, mask=mask)\n",
     "        image = self.as_tensor(augments['image'])\n",
     "        mask = augments['mask'][None]\n",
-    "        return image, mask\n",
+    "        mask_torch = torch.from_numpy(mask).to(torch.float16)\n",
+    "        return image, mask_torch\n",
     "        \n",
     "    def __getitem__(self, index):\n",
     "        image_path = MASK_PATH/f'image_{index}'\n",
@@ -517,7 +535,8 @@
     "            filename = self.files[idx]\n",
     "            x1, x2, y1, y2 = self.slices[index][1:]\n",
     "            with rasterio.open(filename) as dataset:\n",
-    "                image = read_from_slice(dataset, x1, x2, y1, y2).astype('uint8')\n",
+    "                layers = extract_layers(dataset, filename)\n",
+    "                image = read_from_slice(dataset, layers, x1, x2, y1, y2).astype('uint8')\n",
     "            mask = self.masks[idx][x1:x2,y1:y2]\n",
     "            with open(image_path, \"wb\") as filehandler:\n",
     "                pickle.dump(image, filehandler)\n",
@@ -537,7 +556,7 @@
     "        return self.len\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return f'total: {len(self)}, skipped: {self.skipped}'"
+    "        return f'total: {len(self)}, skipped: {self.skipped} mode: {self.mode}'"
    ]
   },
   {
